changed spectral flux

--- a/Opdracht_3/ML3_muziek_genres.ipynb
+++ b/Opdracht_3/ML3_muziek_genres.ipynb
@@ -2726,44 +2726,45 @@
     "---\n",
     "\n",
     "**Spectral Flux**\n",
-    "- **TLDR**: By analyzing spectral flux across a track, we gain insight into the temporal dynamism of a piece, which is a key characteristic for clustering music into genres.\n",
-    "    - High flux values indicate rapid changes in spectral content, such as sudden instrument attacks, beats, or note transitions.\n",
-    "    - Low flux values suggest sustained tones, continuous sounds, or gradual transitions.\n",
+    "- **TLDR**: Spectral flux measures how much a track's sound changes over time, helping distinguish genres based on their temporal dynamism.\n",
+    "    - High flux values indicates that there are rapid changes in the spectral content, such as sudden instrument attacks or beats. \n",
+    "    - Low flux values suggest smooth, steady sounds or gradual changes. \n",
     "\n",
     "**What It Does:**\n",
     "- Spectral flux measures the rate of change in the power spectrum across successive time frames.\n",
     "- It captures how dynamic or stable the sound is over time. Rapid spectral changes are common in genres like hip-hop, whereas smoother transitions are more typical of classical.\n",
     "\n",
     "**Why Useful:**\n",
-    "- Genre Differentiation: High spectral flux values indicate fast-changing spectral content, which is characteristic of genres with frequent note or beat changes, such as hip-hop or EDM. Lower flux values reflect more sustained, stable sounds, like those in ambient or classical genres.\n",
-    "- Rhythmic Complexity: Tracks with intricate rhythms or beatswitches produce noticeable spectral variations, leading to higher flux values.\n",
-    "- Dynamic Textures: Helps detect changes in timbre or instrumentation, such as the transition from a quiet passage to a sudden loud section.\n",
+    "- Genre Differentiation: High values indidate fast changing spectral content, which are characteristics of genres with a frequent beat change (hip-hop for example). Lower values are smoother sounds (classicdal music for example).\n",
+    "- Rhythmic Complexity: Tracks with complex rhythms or beat variations produce higher flux.\n",
+    "- Dynamic Textures: Helps detect shifts in sound, like quiet-to-loud transitions or new instruments.\n",
     "\n",
     "**How Spectral Flux Is Constructed:**\n",
     "\n",
     "1. **Input Data:**\n",
-    "   - Start with the Short-Time Fourier Transform (STFT), which splits the audio signal into overlapping frames and computes the spectrum for each frame:\n",
+    "   - Start with the Short-Time Fourier Transform (STFT). This splits the audio signal into overlapping audioframes analyzing the frequency content in each seperate frame:\n",
     "     $$\n",
     "     S(t, f): \\text{The power spectrum at time } t \\text{ and frequency } f.\n",
     "     $$\n",
     "\n",
     "2. **Compute Frame-to-Frame Differences:**\n",
-    "   - Measure how the spectrum changes between consecutive frames. The flux at time t is given by:\n",
+    "   - Calculate the difference in spectrum between each frame: \n",
     "     $$\n",
     "     \\text{Flux}(t) = \\sum_{f} \\left( S(t, f) - S(t-1, f) \\right)^2\n",
     "     $$\n",
-    "     - This is a squared difference, ensuring that both increases and decreases in spectral values contribute equally to the flux.\n",
+    "     - This difference is squared. By doing this you ensure that both increases and decreases in the spectral values contribute equally to the flux. \n",
     "\n",
     "3. **Normalization (Optional):**\n",
-    "   - To focus on relative changes rather than absolute magnitudes, normalize the spectrum:\n",
+    "   - To focus on relative changes rather than absolute magnitudes, you normalize the spectrum:\n",
     "     $$\n",
     "     \\text{Normalized Spectrum}(t, f) = \\frac{S(t, f)}{\\sum_{f} S(t, f)}.\n",
     "     $$\n",
-    "     - This ensures that variations are not dominated by the overall energy in the signal.\n",
+    "     - This ensures that variantions are not dominated by eachother.\n",
     "\n",
     "4. **Aggregate Across Frames:**\n",
-    "   - The result is a time series of flux values, where each value represents the spectral change between two consecutive frames.\n",
+    "   - This produces a time series showing spectral flux at each moment, representing how much the sound changes frame by frame.\n",
     "\n",
+    "SpectralFlux. (z.d.). https://nl.mathworks.com/help/audio/ref/spectralflux.html\n",
     "\n",
     "---\n",
     "\n",
@@ -11059,7 +11060,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
