features till spectral contrast fixed

--- a/Opdracht_3/ML3_muziek_genres.ipynb
+++ b/Opdracht_3/ML3_muziek_genres.ipynb
@@ -2502,17 +2502,8 @@
     "### Feature reasoning first pass\n",
     "\n",
     "#### **MFCCs (Mel-Frequency Cepstral Coefficients)**\n",
-    "-   **TLDR**: MFCCs turn raw audio into a simpler, more human-like representation of sound. They focus on capturing the tone and texture of music, making them great for grouping and identifying different genres.\n",
     "\n",
-    "**What It Does:**\n",
-    "- MFCCs describe the overall shape of a sound’s frequency content, focusing on its tone and texture.\n",
-    "- They are based on the Mel scale, which mimics how our ears naturally hear different pitches.\n",
-    "\n",
-    "**Why Useful:**\n",
-    "- **Timbral characteristics** are key indicators of musical genre. For instance:\n",
-    "    - Classical music usually has smooth, steady MFCC patterns because of its rich harmonies and gentle flow.\n",
-    "    - Hip-hop shows more sudden changes in MFCCs, reflecting its strong beats and quick shifts.\n",
-    "    - MFCCs simplify complex audio data into a smaller, more meaningful form that matches how we hear sounds. This makes them helpful for tasks like grouping similar music or identifying genres.\n",
+    "MFCC's turn raw audio into a simpler, more human-like representation of sound by capturing the tune and texture of sound based on the Mel Scale. This mel scale reflects how we perceive the pitch.  They simpify complex audio data into a more mreaningufl form, which maks them useful for identifying and grouping musical genres. Examples are: classical music has smooth steady MFCC patterns duo to its harmonies, while hip-hop has sudden changes, due to it's strong beats. By focusing on these characteristics, MFCCs help analyze and classify musical genres. \n",
     "\n",
     "**How MFCCs Are Constructed:**\n",
     "\n",
@@ -2569,17 +2560,9 @@
     "---\n",
     "\n",
     "#### **Feature Trajectories (MFCC Delta)**\n",
-    "- **TLDR**: MFCC deltas add a time-sensitive layer to MFCCs by tracking how timbre changes over time. This helps to identify genres with shifting soundscapes or complex rhythms. The math is a sliding window tracks changes while balancing detail and smoothness. Deltas might be less impactful for short, static clips, but are valuable when temporal variation matters. \n",
     "\n",
+    "MFCC deltas capsure how a timbre of certain audio changes over time, making them useful for identifying genres with complex rythms. The difference between MFCCs and MFCC deltas is that delta tracks it's changes instead of the spectra change at each moment. This reveals different temporal patterns. Genres like jazz and classical have smooth shifts, while pop music may have abrupt changes in transitions. MFCC delta are less imptactful for short clips, but have a lot of impact on longer audio files. \n",
     "\n",
-    "**What It Does:**\n",
-    "- MFCC deltas (first-order derivatives) show how MFCC values shift over time. This shows how a certain character of sound changes over time. \n",
-    "- MFCCs describe the spectral shape at each moment, while deltas show how that shape changes over a period of time. \n",
-    "\n",
-    "**Why Useful:**\n",
-    "- Dynamic changes in timbre can be strong indicators of musical genre:\n",
-    "  - Jazz and classical may show smooth shifts from evolving instrumentation and harmonies, while pop music could have more abrupt changes in the transitions or drops. \n",
-    "- Even 30-second samples can reveal rhythmic details or instrumental changes.\n",
     "\n",
     "**How MFCC Deltas Are Constructed:**\n",
     "\n",
@@ -2605,19 +2588,10 @@
     "---\n",
     "\n",
     "#### **Spectral Centroid**\n",
-    "- **TLDR**: Spectral centroids describe the \"center of mass\" of a sound’s frequencies. It gives an insight into the timral brightess and other genre related characteristics. The math relies on a weighted average that highlights the dominant frequency regions in a spectrum.\n",
-    "  \n",
     "\n",
-    "**What It Does:**\n",
-    "- The spectral centroid measures the \"center of mass\" of a sound’s frequency spectrum.\n",
-    "- It provides a numerical value that reflects the brightness of a sound:\n",
-    "  - A high centroid corresponds to brigher / sharper sounds, dominated by higher frequencies (electric guitars for example).\n",
-    "  - A low centroid corresponds to darker / mellower sounds, dominated by lower frequencies (bass for example). \n",
-    "  \n",
+    "The spectral centroid represents the 'center of the mass' of a sounds frequency spectrum. This gives an insight into the trimbral brightness and other genre related characteristics. The math relies on a weighted averae that highlights the dominant frequency regions in a spectrum.\n",
     "\n",
-    "**Why Useful:**\n",
-    "- Genre differentiation: it's possible to distinct different genres bases on the centroid. Higher spectral centroids could be rock, while lower counes could be jazz or classical.\n",
-    "- Timbre characterization: helps distinguish different instruments and production styles based on brightness.\n",
+    "A high centroid corresponds to a bright, sharp sound (like electric guitars), while a low centroid reflects a more darker, mellow tone (like bass). This feature helps to distinct different genres based on the centroid by distinguishing instruments and production styles bases on their specific brightness. \n",
     "\n",
     "**How Spectral Centroids Are Constructed:**\n",
     "\n",
@@ -2660,18 +2634,8 @@
     "---\n",
     "\n",
     "#### **Spectral Roll-Off**\n",
-    "- **TLDR**: Spectral roll-off shows how the energy is spread across frequencies by finding the 'cut-off' frequency in audio signals. Despite it's not too complicated math it's very usefull for distinguishing between genres.\n",
     "\n",
-    "**What It Does:**\n",
-    "- It marks the frequency below which a certain percentage of the total spectral energy is located. \n",
-    "- This measure helps to separate sounds with a high frequency energy from those with more energy in lower frequencies. \n",
-    "\n",
-    "\n",
-    "**Why Useful:**\n",
-    "- Grenre differentiation: Energetic genres like rock have higher roll-off energies duo to the more high frequency content. Smoother genres like jazz tend to have lower values. \n",
-    "- Instrumental texture: Certain instruments like electric guiters with high-frequency energies raise the roll-off point.\n",
-    "- Timbre analysis: This feature works alongside other features (like the spectral centroid feature) to get a better understanding about how energy is distributed across the spectrum. \n",
-    "\n",
+    "Spectral roll-off shows how the energy of a song is spread across frequencies by finding the cut-off frequency in audio signals. It measures the frequency below which a certain percentage of total spectral energy is concentraded, helping it to distinguish between sounds with a high and low frequency energy. Genres like rock have a more high frequency, due to its higher roll-off value, while smoother genres like jazz or classical have lower ones. It also analyzes instrumental texture, since instruments like electri guitars raise the roll-off point. Spectral roll off owrks alongside the other features which are described above to give a better insight into how energy is distributed across the frequency spectrum. \n",
     "\n",
     "**How Spectral Roll-Off Is Constructed:**\n",
     "\n",
@@ -2726,18 +2690,8 @@
     "---\n",
     "\n",
     "**Spectral Flux**\n",
-    "- **TLDR**: Spectral flux measures how much a track's sound changes over time, helping distinguish genres based on their temporal dynamism.\n",
-    "    - High flux values indicates that there are rapid changes in the spectral content, such as sudden instrument attacks or beats. \n",
-    "    - Low flux values suggest smooth, steady sounds or gradual changes. \n",
     "\n",
-    "**What It Does:**\n",
-    "- Spectral flux measures the rate of change in the power spectrum across successive time frames.\n",
-    "- It captures how dynamic or stable the sound is over time. Rapid spectral changes are common in genres like hip-hop, whereas smoother transitions are more typical of classical.\n",
-    "\n",
-    "**Why Useful:**\n",
-    "- Genre Differentiation: High values indidate fast changing spectral content, which are characteristics of genres with a frequent beat change (hip-hop for example). Lower values are smoother sounds (classicdal music for example).\n",
-    "- Rhythmic Complexity: Tracks with complex rhythms or beat variations produce higher flux.\n",
-    "- Dynamic Textures: Helps detect shifts in sound, like quiet-to-loud transitions or new instruments.\n",
+    "Spectral flux measures how much a track's sound changes over time by analyzing the rate of change in the power spectrum across different frames. A high flux indicates fast spectral changes like sudden beats, which are common in hip-hop, while low values suggest a more smooth, steady transition, which are typical for classical music. This feature helps differentiate genres based on the dynamic textrues in audio files. \n",
     "\n",
     "**How Spectral Flux Is Constructed:**\n",
     "\n",
@@ -2769,35 +2723,22 @@
     "---\n",
     "\n",
     "#### **Spectral Contrast**\n",
-    "- **TLDR**: By analyzing spectral contrast, we gain insights into the tonal and dynamic structure of music, which plays a crucial role in unsupervised clustering of genres. Spectral contrast effectively highlights differences in instrumentation, harmonic complexity, and texture that are often unique to specific musical styles.\n",
-    "    - High Spectral Contrast:\n",
-    "        - Indicates a wide dynamic range within the frequency bands.\n",
-    "        - Found in genres like jazz, where instruments produce distinct tonal peaks and quieter gaps between notes.\n",
-    "    - Low Spectral Contrast:\n",
-    "        - Suggests evenly distributed spectral energy.\n",
     "\n",
-    "**What It Does:**\n",
-    "- Spectral contrast measures the difference in energy levels between peaks (high-energy regions) and valleys (low-energy regions) within different frequency bands of the spectrum.\n",
-    "- It provides a representation of the tonal texture and harmonic richness of the audio.\n",
-    "\n",
-    " **Why Useful:**\n",
-    "- Texture and Complexity: Genres with complex instrumentation and harmonic variation, such as jazz or classical, tend to exhibit higher spectral contrast, as there are pronounced differences between the harmonic peaks (e.g., instruments) and quieter background frequencies.\n",
-    "- Minimalist Genres: Simpler genres like ambient or drone music often have lower spectral contrast because their spectral energy is more evenly distributed, resulting in smoother sound textures.\n",
-    "- Distinguishing Genres: Spectral contrast can differentiate between genres with similar timbres but different dynamic or harmonic structures.\n",
+    "Spectral contrast measures the difference in energy between different peaks and lows across the frequency of an audio file to hihglight the most prominent and least noticeable parts of an audio file. It shows how the energy levels vary across the spectrum, giving insights in the tonal texture and dynamic range of a sound. A high spectral contract, which is common for jazz, indicates a wide range within the frequency. A low spectral contact suggest that the spectral energy is distributed more evenly where different tones create a more smoother tonal texture. Spectral contrast is especially useful to differentiate between genres with similar timbres, but with different dynamic or harmonic structures. \n",
     "\n",
     "**How Spectral Contrast Is Constructed:**\n",
     "\n",
     "1. **Divide the Spectrum Into Bands:**\n",
-    "   - The frequency spectrum is divided into several logarithmically spaced sub-bands (e.g., low, mid, and high frequencies), mimicking how the human ear perceives sound.\n",
+    "   - The frequency spectrum is split into multiple logarithmically spaced sub-bands (e.g., low, mid, and high frequencies), to match human hearing.\n",
     "   - Use the Short-Time Fourier Transform (STFT) to obtain the spectrum, S(t, f), where t  is time, and f is frequency.\n",
     "\n",
     "2. **Identify Peaks and Valleys:**\n",
     "   - For each sub-band at a given time frame t:\n",
-    "     - Peaks: The highest energy values in the band (representing dominant harmonics or tonal components).\n",
-    "     - Valleys:The lowest energy values in the band (representing quieter or background noise components).\n",
+    "     - Peaks: The highest energy values (representing dominant harmonics or tonal components).\n",
+    "     - Valleys:The lowest energy values (representing quieter or background noise components).\n",
     "\n",
     "3. **Compute Contrast:**\n",
-    "   - For each sub-band, calculate the ratio between the peak energy and the valley energy:\n",
+    "   - For each sub-band the ratio between the peak and valley energy levels is calculated.\n",
     "     $$\n",
     "     \\text{Contrast}(t, b) = 10 \\cdot \\log_{10}\\left(\\frac{\\text{Peak Energy}(b)}{\\text{Valley Energy}(b)}\\right),\n",
     "     $$\n",
@@ -2806,16 +2747,11 @@
     "   - The result is expressed in decibels (dB) to align with the logarithmic nature of human hearing.\n",
     "\n",
     "4. **Aggregate Across Time:**\n",
-    "   - Compute mean and variance of the spectral contrast across all time frames to capture its overall behavior for the track.\n",
+    "   - Compute the mean and variance of spectral contrast over time to summrize the track's overzall tonal texture. \n",
     "\n",
-    "**Interpretation:**\n",
+    "librosa.feature.spectral_contrast — librosa 0.11.0rc1 documentation. (z.d.). https://librosa.org/doc/main/generated/librosa.feature.spectral_contrast.html\n",
     "\n",
-    "- High Spectral Contrast:\n",
-    "  - Indicates a wide dynamic range within the frequency bands.\n",
-    "  - Found in genres like jazz, where instruments produce distinct tonal peaks and quieter gaps between notes.\n",
-    "- Low Spectral Contrast:\n",
-    "  - Suggests evenly distributed spectral energy.\n",
-    "  - Found in genres like ambient (not present in our labeled dataset), where sustained tones create a smoother texture.\n",
+    "【Wave analytics Method】What is Spectral Contrast? (z.d.). Zenn. https://zenn.dev/yuto_mo/articles/7413ca2ed4eb5f\n",
     "\n",
     "---\n",
     "\n",
