added source to spectral roll off

--- a/Opdracht_3/ML3_muziek_genres.ipynb
+++ b/Opdracht_3/ML3_muziek_genres.ipynb
@@ -2555,7 +2555,7 @@
     "\n",
     "Deruty, E. (2022, December 15). Intuitive understanding of MFCCs - Emmanuel Deruty - Medium. Medium. https://medium.com/@derutycsl/intuitive-understanding-of-mfccs-836d36a1f779\n",
     "\n",
-    "\n",
+    "Goksselgunduz. (2023, 7 augustus). Fundamental Terms of Signal Processing - Goksselgunduz - Medium. Medium. https://medium.com/@goksselgunduz/fundamental-terms-of-signal-processing-2826a1b5543d\n",
     "\n",
     "---\n",
     "\n",
@@ -2631,6 +2631,8 @@
     "\n",
     "Wikipedia contributors. (2024b, oktober 28). Spectral centroid. Wikipedia. https://en.wikipedia.org/wiki/Spectral_centroid\n",
     "\n",
+    "Goksselgunduz. (2023, 7 augustus). Fundamental Terms of Signal Processing - Goksselgunduz - Medium. Medium. https://medium.com/@goksselgunduz/fundamental-terms-of-signal-processing-2826a1b5543d\n",
+    "\n",
     "---\n",
     "\n",
     "#### **Spectral Roll-Off**\n",
@@ -2686,6 +2688,10 @@
     "  - At 300 Hz: 50 + 30 + 20 = 100 (exceeds 93.5).\n",
     "\n",
     "Thus, the roll-off frequency is approximately 300 Hz.\n",
+    "\n",
+    "librosa.feature.spectral_rolloff — librosa 0.11.0rc1 documentation. (z.d.). https://librosa.org/doc/main/generated/librosa.feature.spectral_rolloff.html\n",
+    "\n",
+    "Goksselgunduz. (2023, 7 augustus). Fundamental Terms of Signal Processing - Goksselgunduz - Medium. Medium. https://medium.com/@goksselgunduz/fundamental-terms-of-signal-processing-2826a1b5543d\n",
     "\n",
     "---\n",
     "\n",
