changed features till spectral bandwidth

--- a/Opdracht_3/ML3_muziek_genres.ipynb
+++ b/Opdracht_3/ML3_muziek_genres.ipynb
@@ -2526,7 +2526,7 @@
     "     $$\n",
     "     m(f) = 2595 \\cdot \\log_{10}(1 + \\frac{f}{700})\n",
     "     $$\n",
-    "    - The frequency spectrum is then divided into multiple overlapping mel filter banks. Each of these captures the energy in a specific range of frequencies.\n",
+    "    - The spectrum is split into overlapping mel filter banks, each capturing energy in a frequency range.\n",
     "\n",
     "4. **Compute Filter Bank Energies:**\n",
     "    - Multiply the magnitude spectrum by the Mel filter bank weights and sum the results for each filter to get a set of Mel-scaled energies:\n",
@@ -2547,8 +2547,7 @@
     "     $$\n",
     "     C_n = \\sum_{m=0}^{M-1} \\log(E_m) \\cdot \\cos\\left(\\frac{\\pi n (2m+1)}{2M}\\right)\n",
     "     $$\n",
-    "    - The result is the Mel-Frequency Cepstral Coefficients (MFCCs), with the first few coefficients typically carrying most of the useful information.\n",
-    "\n",
+    "    - The result is the MFCCs, with the first few coefficients holding most useful information.\n",
     "Valerio Velardo - The Sound of AI. (2020, October 5). Mel-Frequency cepstral coefficients explained easily [Video]. YouTube. https://www.youtube.com/watch?v=4_SH2nfbQZ8\n",
     "\n",
     "GeeksforGeeks. (2024b, juni 26). Melfrequency Cepstral Coefficients (MFCC) for Speech Recognition. GeeksforGeeks. https://www.geeksforgeeks.org/mel-frequency-cepstral-coefficients-mfcc-for-speech-recognition/?ref=gcse_outind\n",
@@ -2576,7 +2575,7 @@
     "     $$\n",
     "     - C(t): MFCC coefficient at time t.\n",
     "     - T: Size of the time window for delta computation.\n",
-    "   - This formula averages the differences across neighboring frames, emphasizing changes and reducing noise.\n",
+    "   - This formula averages neighboring frame differences to highlight changes and reduce noise.\n",
     "\n",
     "3. **Smoothing and Noise Reduction:**\n",
     "   - The size of the sliding window (T) determines the smoothness of the delta values:\n",
@@ -2663,7 +2662,7 @@
     "      E_{\\text{total}} = \\sum_{i=0}^{F} S(f_i) \n",
     "     $$ \n",
     "    - the total energy in the spectrum.\n",
-    "   - Mathematically, frolloff satisfies:\n",
+    "   - Mathematically, rolloff shows:\n",
     "     $$\n",
     "     f_{\\text{rolloff}} = \\min \\{ f \\, | \\, E_{\\text{cumulative}}(f) \\geq p \\cdot E_{\\text{total}} \\}\n",
     "     $$\n",
@@ -2712,7 +2711,7 @@
     "     $$\n",
     "     \\text{Flux}(t) = \\sum_{f} \\left( S(t, f) - S(t-1, f) \\right)^2\n",
     "     $$\n",
-    "     - This difference is squared. By doing this you ensure that both increases and decreases in the spectral values contribute equally to the flux. \n",
+    "     - This difference is squared to ensure that both increases and decreases inthe spectral values contribute equally as much. \n",
     "\n",
     "3. **Normalization (Optional):**\n",
     "   - To focus on relative changes rather than absolute magnitudes, you normalize the spectrum:\n",
@@ -2764,27 +2763,16 @@
     "\n",
     "#### **Envelope Features**\n",
     "\n",
-    "- **TLDR** Envelope features are vital for capturing the amplitude dynamics and temporal structure of music. By quantifying the shape of the amplitude contour, these features help distinguish genres based on their rhythmic intensity, instrument usage, and loudness variations. This makes envelope features particularly useful for unsupervised clustering, where such differences play a key role in grouping similar genres.\n",
-    "\n",
-    "**What It Does:**\n",
-    "- Envelope features describe the amplitude contour of an audio signal over time. The envelope traces the general shape of the signal's amplitude, ignoring rapid oscillations in the waveform, thereby capturing its overall loudness dynamics.\n",
-    "\n",
-    "\n",
-    "Why Useful:\n",
-    "- Sustained Notes vs. Transients: \n",
-    "  - Sustained instruments, such as violins or organs in classical music, produce a smooth and gradual envelope, with relatively stable amplitude over time.\n",
-    "  - Percussive or rhythmic sounds, such as drums or claps in hip-hop, create sharp, spiky envelopes, with rapid rises and falls in amplitude.\n",
-    "- Genre Differentiation: Envelope features can help distinguish genres based on their typical amplitude profiles. For instance, genres with heavy percussion (e.g., hip-hop, EDM) show pronounced transients, while genres with continuous tones (e.g., ambient) exhibit smoother amplitude changes.\n",
-    "\n",
+    "Envelope features capture the amplitude dynamics and temporal structure of music. It helps to distinguish genres bases on the intensity of the rythm, usage of instruments and variations in loudness. They describe the overall shape of an audio signal's amplitude, while ignoring rapid oscillations. It highlighs differences between sustained sounds (like violins) and percussive sounds (like drums). This differentiation makes these envelop features useful for genre classification. Genres with a high envelop variance are common for hip-hop and EDM, while smoother envelopes with a lower variance and steadier loudness levels are more common for ambient or classical music. \n",
     "\n",
     "**How Envelope Features Are Constructed:**\n",
     "\n",
     "1. **Obtain the Signal Envelope:**\n",
-    "   - Compute the absolute value of the signal y(t) to capture the signal's magnitude while ignoring its polarity:\n",
+    "   - Take the absolute value of the signal y(t) to get the signal's magnitude, while ignoring its polarity:\n",
     "     $$\n",
     "     A(t) = |y(t)|\n",
     "     $$\n",
-    "     This step removes the oscillations of the waveform while retaining the overall amplitude variations.\n",
+    "     This sstep removes fast oscillations but keeps the overall amplitude changes. \n",
     "\n",
     "   - To further smooth out rapid fluctuations, apply a low-pass filter or use a moving average on A(t). A common method is:\n",
     "     $$\n",
@@ -2793,7 +2781,7 @@
     "     where h(t) is a smoothing window, such as a Hamming or Gaussian window.\n",
     "\n",
     "2. **Extract Descriptive Statistics:**\n",
-    "   - Compute summary statistics of the envelope A(t):\n",
+    "   - Compute multiple summary statistics of the envelope A(t):\n",
     "     - **Mean Amplitude** (μ):\n",
     "       $$\n",
     "       \\mu = \\frac{1}{N} \\sum_{t=1}^{N} A(t)\n",
@@ -2806,44 +2794,31 @@
     "       High variance indicates a signal with sharp transients, while low variance suggests smooth dynamics.\n",
     "\n",
     "3. **Measure Dynamics Over Time:**\n",
-    "   - Analyze rise and fall times (e.g., attack, decay) within the envelope to quantify how quickly or slowly the signal's amplitude changes.\n",
-    "   - Use these time-domain measures to better capture the temporal structure of the signal.\n",
+    "   - Analyse how quickly amplitude rises and falls to udnerstand the temporal structure of the signal. \n",
     "\n",
     "4. **Compute Energy:**\n",
-    "   - Total energy, often included as part of envelope features, is calculated as:\n",
+    "   - The total energy gives insight into the loudness:\n",
     "     $$\n",
     "     E = \\frac{1}{N} \\sum_{t=1}^{N} A(t)^2\n",
     "     $$\n",
-    "     Energy correlates with the perceived loudness of the audio.\n",
+    "     Higher energy = louder sounds.\n",
     "\n",
-    "**Interpretation:**\n",
-    "- High Envelope Variance:\n",
-    "  - Signals with abrupt transients, such as drum beats, exhibit large fluctuations in amplitude and thus high envelope variance.\n",
-    "- Low Envelope Variance:\n",
-    "  - Signals with sustained notes, such as a continuous hum or strings in classical music, produce a steady amplitude contour, resulting in low variance.\n",
+    "     GeeksforGeeks. (2024c, december 28). Mean, Variance and Standard Deviation. GeeksforGeeks. https://www.geeksforgeeks.org/mathematics-mean-variance-and-standard-deviation/\n",
+    "\n",
+    "     Wikipedia contributors. (2024c, november 14). Envelope (music). Wikipedia. https://en.wikipedia.org/wiki/Envelope_(music)\n",
     "\n",
     "---\n",
     "\n",
     "#### **Spectral Bandwidth**\n",
     "\n",
-    "- **TLDR**: By capturing the range of frequencies in the signal, spectral bandwidth provides insight into the textural richness and energy distribution of music. Its ability to differentiate between narrow and wide frequency spreads makes it a powerful feature for clustering music genres, where these characteristics strongly influence perceptual differences.\n",
+    "Spectral band with captures the range of frequencies in a signal and provides insight into the energy distribution of music. It measures how spread out the frequency is around the spectral centroid. A wider bandwidth indicates the presence of high frequency components while a narrow bandwidth suggests more lower frequencies. This makes it a useful feature for genre differentiation, since energetic genres like rock and metal have wide bandwidths due to it's characteristics, while classic music has narrower bandwidths emphasizing smoother (lower frequency) sounds. \n",
     "\n",
-    "**What It Does:**\n",
-    "- Spectral Bandwidth measures the spread or range of frequencies around the spectral centroid. It quantifies how much of the frequency content is concentrated near the center versus spread across a broader range. A wider spectral bandwidth indicates the presence of high-frequency components, while a narrower bandwidth signifies that most energy is focused in lower frequencies.\n",
-    "\n",
-    "\n",
-    "**Why Useful:**\n",
-    "- Wide Bandwidth:\n",
-    "  - Energetic genres like metal and rock often exhibit wide spectral bandwidth due to the abundance of high-frequency content (e.g., cymbals, synthesizers, distorted guitars).\n",
-    "- Narrow Bandwidth:\n",
-    "  - Genres like classical have narrower bandwidths, as they typically emphasize smoother, lower-frequency sounds, such as strings or soft pads.\n",
-    "- Genre Differentiation: By analyzing the spectral spread, this feature helps to distinguish between genres with different tonal and textural characteristics.\n",
     "\n",
     "**How Spectral Bandwidth Is Constructed:**\n",
     "\n",
     "1. **Frequency Representation:**\n",
-    "   - Begin with the magnitude spectrum of the audio signal, S(f), which represents the energy present at each frequency f.\n",
-    "   - Compute the spectral centroid C, which serves as the \"center of mass\" of the spectrum, as explained earlier.\n",
+    "   - Start with the magnitude spectrum of the audio signal, S(f), which show how much energy exists in each frequency 'f'\n",
+    "   - Find the spectral centroid C, the 'center' of the spectrum.\n",
     "\n",
     "2. **Deviation Around the Centroid:**\n",
     "   - Spectral Bandwidth is the weighted standard deviation of frequencies around the spectral centroid. Mathematically, it is defined as:\n",
@@ -2853,22 +2828,18 @@
     "     - S(f): Magnitude of the spectrum at frequency f.\n",
     "     - C: Spectral centroid, or the weighted mean frequency.\n",
     "     - f - C: Distance of each frequency from the centroid.\n",
-    "     - The weights S(f) ensure that frequencies with higher energy have a greater influence on the bandwidth calculation.\n",
+    "     - The weights S(f) ensure that frequencies with higher energy have more impact on the bandwidth calculation. \n",
     "\n",
     "3. **Physical Interpretation:**\n",
-    "   - A narrow bandwidth corresponds to a spectrum with most of its energy concentrated near the centroid (e.g., a pure sine wave).\n",
-    "   - A wide bandwidth indicates significant energy spread across a larger frequency range (e.g., white noise or cymbal crashes).\n",
+    "   - Narrow bandwidth: most energy is near the centroid\n",
+    "   - Wide bandwidth: energy is spead out. \n",
     "\n",
     "4. **Descriptive Statistics:**\n",
-    "   - The mean** and variance of the spectral bandwidth over time are typically calculated to capture its behavior across an audio clip:\n",
-    "     - Mean Bandwidth: Represents the overall frequency spread across the clip.\n",
-    "     - Bandwidth Variance: Reflects fluctuations in the frequency spread, which can occur in dynamic or evolving soundscapes.\n",
+    "   - The mean and variance of the spectral bandwidth over time are typically calculated to capture its behavior across an audio clip:\n",
+    "     - Mean Bandwidth: shows the overall frequency of an audio file\n",
+    "     - Bandwidth Variance: captures the changes over time. \n",
     "\n",
-    "**Interpretation:**\n",
-    "- Dynamic Genres:\n",
-    "  - In genres like rock, spectral bandwidth often fluctuates significantly due to transitions between dense, high-energy sections (e.g., drops or choruses) and quieter, more focused segments (e.g., verses).\n",
-    "- Stable Genres:\n",
-    "  - In genres like classical, spectral bandwidth remains relatively consistent, with smooth transitions and a narrower spread of frequencies.\n",
+    "Goksselgunduz. (2023, 7 augustus). Fundamental Terms of Signal Processing - Goksselgunduz - Medium. Medium. https://medium.com/@goksselgunduz/fundamental-terms-of-signal-processing-2826a1b5543d\n",
     "\n",
     "---\n",
     "\n",
